--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -1,7 +1,6 @@
 .root-layout {
   position: relative;
-}
-
-.main {
-  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
