--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -26,6 +26,7 @@ $fw-regular: 400;
 $fw-medium: 500;
 $fw-semi-bold: 600;
 $fw-bold: 700;
+$fw-very-bold: 800;
 
 $fs-xs: rem(14px);
 $fs-s: rem(16px);
