--- a/src/components/editor/elems/editor-response-section/editor-response-section.scss
+++ b/src/components/editor/elems/editor-response-section/editor-response-section.scss
@@ -1,11 +1,12 @@
 @import '@/styles/constants.scss';
 
 .response {
-  height: 55vh;
-  width: 35%;
+  height: 50vh;
+  width: 36%;
   min-width: 300px;
-  background-color: $fourth-color-light;
-  border-radius: 20px;
+  background-color: $secondary-color-light;
+  border-radius: 4px;
+  margin: 1%;
   box-shadow: $box-shadow-light;
   color: $text-color-title;
   padding: 15px;
