--- a/src/components/editor/elems/editor-section/editor-section.scss
+++ b/src/components/editor/elems/editor-section/editor-section.scss
@@ -2,18 +2,19 @@
 
 .editor-section {
   position: relative;
-  height: 55vh;
-  width: 35%;
+  height: 50vh;
+  width: 43%;
   min-width: 300px;
   background-color: $third-color-light;
-  border-radius: 20px;
+  border-radius: 4px;
+  margin: 1%;
   color: $text-color-title;
   box-shadow: $box-shadow-light;
 }
 .editor-section__request {
   padding: 15px;
 }
-.editor-section__variable {
+.editor-section__variables {
   position: absolute;
   bottom: 0;
   padding: 15px;
@@ -21,14 +22,16 @@
   width: 100%;
   border-top: 1px solid $fourth-color-light;
 }
-.request__edit {
+.edit {
   width: 100%;
-  height: 9em;
   resize: none;
-  color: $text-color;
 }
-.request__variables {
+.variables {
   width: 100%;
-  height: 4em;
   resize: none;
+}
+.drawer {
+  display: flex;
+  align-items: center;
+  padding: 1%;
 }
