feat: implement auth

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,4 +1,5 @@
 @import '@/styles/constants.scss';
+@import '@/styles/links';
 
 .header {
   position: sticky;
@@ -30,45 +31,19 @@
     gap: 5px;
   }
 
-  &__btn {
-    cursor: pointer;
-    border: 0;
-    border-radius: 4px;
-    margin: 0 5px;
-    width: 80px;
-    padding: 10px 0;
-    transition: 0.4s;
-    text-align: center;
-
-    &:hover {
-      color: $color-white;
-      box-shadow: 0 0 20px rgba(111, 117, 225, 0.6);
-      background-color: $hover-button-light;
-    }
-
-    &:active {
-      background-color: #5c7487;
-    }
-  }
-
-  &__buttons {
-    display: flex;
-    justify-content: space-between;
-  }
-
   &__links {
     display: flex;
     justify-content: space-between;
+    gap: 35px;
+  }
 
-    a {
-      &:hover {
-        color: $hover-button-light;
-      }
-    }
+  &__link {
+    @include nav-link;
   }
 
   &__tumblers {
     display: flex;
+    align-items: center;
     gap: 20px;
   }
 
