--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -63,13 +63,13 @@ $color-grey-black-5: rgba(249, 249, 250, 1);
 $primary-color-light: rgba(248, 244, 235, 1);
 $secondary-color-light: rgb(238, 232, 219);
 $third-color-light: #fdfdff;
-$fourth-color-light: #CDCAC3;
-$hover-button-light:#768fa3;
+$fourth-color-light: #cdcac3;
+$hover-button-light: #768fa3;
 $primary-color-dark: #3c3744;
-$secondary-color-dark: #5e5e5e;
+$secondary-dark: #5e5e5e;
 
-$text-color: #393D3F;
-$text-color-title: #546A7B;
+$text-color: #393d3f;
+$text-color-title: #546a7b;
 
 $box-shadow-light: 0px 2px 3px rgba(0, 0, 0, 0.3);
 
