--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,4 +1,5 @@
 @import '@/styles/constants.scss';
+@import '@/styles/links';
 
 .footer {
   width: 100%;
@@ -21,31 +22,7 @@
     width: 190px;
 
     &-link {
-      position: relative;
-      text-decoration: none;
-
-      &:hover {
-        color: $hover-button-light;
-      }
-
-      &::before {
-        content: '';
-        position: absolute;
-        width: 100%;
-        height: 2px;
-        border-radius: 4px;
-        background-color: $hover-button-light;
-        bottom: -2px;
-        left: 0;
-        transform-origin: right;
-        transform: scaleX(0);
-        transition: transform 0.5s ease-in-out;
-      }
-
-      &:hover::before {
-        transform-origin: left;
-        transform: scaleX(1);
-      }
+      @include nav-link;
     }
   }
 
