--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,7 @@
   width: 100%;
   height: 100%;
   background: $primary-color-light;
-  font-family: "DM Sans", sans-serif;
+  font-family: 'DM Sans', sans-serif;
   color: $text-color;
 }
 
