--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -4,8 +4,8 @@
 .footer {
   width: 100%;
   height: 80px;
-  background-color: $secondary-color-light;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3) inset;
+  background: var(#{--component-background-default});
+  box-shadow: var(#{--box-shadow-default});
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -18,7 +18,7 @@
     justify-content: space-between;
     gap: 20px;
     font-size: 1.2rem;
-    color: $text-color;
+    color: var(#{--text-color-default});
     width: 190px;
 
     &-link {
