--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -5,7 +5,7 @@
   position: sticky;
   top: 0;
   width: 100%;
-  color: $text-color;
+  color: var(#{--text-color-default});
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
@@ -57,8 +57,8 @@
   }
 
   &__sticky {
-    background: $secondary-color-light;
-    box-shadow: $box-shadow-light;
+    background: var(#{--component-background-default});
+    box-shadow: var(#{--box-shadow-default});
     opacity: 0.95;
   }
 }
