--- a/src/index.scss
+++ b/src/index.scss
@@ -7,9 +7,9 @@
 :root {
   width: 100%;
   height: 100%;
-  background: $primary-color-light;
+  background: var(#{--body-background-default});
   font-family: 'DM Sans', sans-serif;
-  color: $text-color;
+  color: var(#{--text-color-default});
 }
 
 #root {
