--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -62,16 +62,31 @@ $color-grey-black-5: rgba(249, 249, 250, 1);
 
 $primary-color-light: rgba(248, 244, 235, 1);
 $secondary-color-light: rgb(238, 232, 219);
+
 $third-color-light: #fdfdff;
 $fourth-color-light: #cdcac3;
 $hover-button-light: #768fa3;
-$primary-color-dark: #3c3744;
+
+// $primary-color-dark: #3c3744;
+// $secondary-color-dark: #5e5e5e;
 $secondary-dark: #5e5e5e;
 
-$text-color: #393d3f;
+// Colors for theme change //
+
+$primary-color-light: rgba(248, 244, 235, 1);
+$secondary-color-light: rgb(238, 232, 219);
+
+$primary-color-dark: #272727;
+$secondary-color-dark: #383838;
+
+$text-color-light: #393d3f;
+$text-color-dark: #f8f2f2;
 $text-color-title: #546a7b;
 
 $box-shadow-light: 0px 2px 3px rgba(0, 0, 0, 0.3);
+$box-shadow-dark: 0px 1px 3px rgba(245, 238, 238, 0.3);
+
+// Colors for change theme  //
 
 $breakpoint-xxs-min: 320px;
 $breakpoint-xs-min: 480px;
@@ -90,3 +105,23 @@ $breakpoint-lg-max: $breakpoint-xl-min - 1px;
 $breakpoint-xl-max: $breakpoint-xxl-min - 1px;
 
 // === / VARIABLES ===
+
+// === DARK/LIGHT THEME ===
+:root {
+  --body-background-dark: #{$primary-color-dark};
+  --body-background-light: #{$primary-color-light};
+  --body-background-default: var(#{--body-background-light});
+
+  --component-background-dark: #{$secondary-color-dark};
+  --component-background-light: #{$secondary-color-light};
+  --component-background-default: var(#{--component-background-light});
+
+  --text-color-dark: #{$text-color-dark};
+  --text-color-light: #{$text-color-light};
+  --text-color-default: var(#{--text-color-light});
+
+  --box-shadow-dark: #{$box-shadow-dark};
+  --box-shadow-light: #{$box-shadow-light};
+  --box-shadow-default: var(#{--box-shadow-light});
+}
+// === DARK/LIGHT THEME ===
