--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -10,16 +10,30 @@
   justify-content: space-between;
   align-items: center;
   padding: 1.5rem 10vh;
-  position: fixed;
-  bottom: 0;
+  // position: fixed;
+  // bottom: 0;
+
+  @media screen and (max-width: $breakpoint-md-min) {
+    padding: 1.5rem 2vh;
+  }
 
   &__team {
     display: flex;
     justify-content: space-between;
     gap: 20px;
-    font-size: 1.2rem;
+    font-size: $fs-m;
     color: var(#{--text-color-default});
     width: 190px;
+
+    @media screen and (max-width: $breakpoint-lg-min) {
+      flex-direction: column;
+      gap: 3px;
+      width: auto;
+    }
+    @media screen and (max-width: $breakpoint-md-min) {
+      font-size: $fs-s;
+      gap: 5px;
+    }
 
     &-link {
       @include nav-link;
@@ -32,11 +46,15 @@
     align-items: center;
     justify-content: center;
     &-logo {
-      width: 140px;
+      width: 150px;
       background-position: 50%;
       background-repeat: no-repeat;
       background-size: contain;
       transition: 0.3s;
+
+      @media screen and (max-width: $breakpoint-sm-min) {
+        width: 90px;
+      }
 
       &:hover {
         transform: scale(105%);
@@ -47,5 +65,8 @@
     font-size: 1.4rem;
     font-weight: 600;
     width: 130px;
+    @media screen and (max-width: $breakpoint-lg-min) {
+      width: auto;
+    }
   }
 }
