--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -1,11 +1,11 @@
 .root-layout {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  min-height: 100vh;
+  // position: relative;
 }
 
 .main {
   height: 100%;
-  margin: 3%;
+  padding: 0 3%;
 }
