--- a/src/pages/home-page/home-page.scss
+++ b/src/pages/home-page/home-page.scss
@@ -8,16 +8,28 @@
   text-align: center;
   display: flex;
   justify-content: space-between;
+  @media screen and (max-width: $breakpoint-md-min ) {
+    flex-direction: column;
+  }
+  @media screen and (max-width: $breakpoint-sm-min ) {
+    padding-top: 20px;
+  }
 
   &__text {
     max-width: 600px;
     margin-top: 30px;
+    @media screen and (max-width: $breakpoint-md-min ) {
+      max-width: 100%;
+    }
   }
 
   &__title {
     font-weight: $fw-very-bold;
     font-size: $fs-xxl;
     line-height: 1.2;
+    @media screen and (max-width: $breakpoint-sm-min ) {
+      font-size: $fs-l;
+    }
   }
 
   &__info {
@@ -26,11 +38,22 @@
     line-height: 1.5;
     letter-spacing: 0.1px;
     font-weight: $fw-regular;
+    @media screen and (max-width: $breakpoint-sm-min ) {
+      font-size: $fs-s;
+    }
   }
 
   &__logo {
+    align-self: center;
     img {
       width: 500px;
+      @media screen and (max-width: $breakpoint-lg-min ) {
+        width: 400px;
+      }
+      @media screen and (max-width: $breakpoint-md-min ) {
+        margin-top: 20px;
+        width: 100%;
+      }
     }
   }
 }
@@ -62,18 +85,28 @@
   width: 80%;
   margin: 6rem auto;
   text-align: center;
+  @media screen and (max-width: $breakpoint-sm-min ) {
+    margin: 3rem auto;
+    width: 100%;
+  }
 
   &__title {
     font-weight: $fw-very-bold;
     font-size: $fs-xxl;
     line-height: 1.3;
+    @media screen and (max-width: $breakpoint-sm-min ) {
+      font-size: $fs-l;
+    }
   }
 
   &__info {
-    margin-top: 2em;
+    margin-top: 1em;
     font-size: $fs-m;
     line-height: 1.5;
     letter-spacing: 0.1px;
     font-weight: $fw-regular;
+    @media screen and (max-width: $breakpoint-sm-min ) {
+      font-size: $fs-s;
+    }
   }
 }
