--- a/src/components/editor/elems/editor-response-section/editor-response-section.scss
+++ b/src/components/editor/elems/editor-response-section/editor-response-section.scss
@@ -1,13 +1,16 @@
 @import '@/styles/constants.scss';
+@import '@/styles/textarea.scss';
 
 .response {
   height: 50vh;
   width: 36%;
   min-width: 300px;
-  background-color: $secondary-color-light;
   border-radius: 4px;
   margin: 1%;
   box-shadow: $box-shadow-light;
-  color: $text-color-title;
-  padding: 15px;
+  padding: 5px 15px;
+  overflow: auto;
+  white-space: pre-wrap;
+
+  @include scroll;
 }
