--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -60,6 +60,9 @@ $secondary-color-dark: #383838;
 $text-color-light: #393d3f;
 $text-color-dark: #f8f2f2;
 $text-color-title: #546a7b;
+$text-color-name: #48aff4;
+$text-color-type:#ffa500;
+$text-color-args: #f74242;
 
 $box-shadow-light: 0px 2px 3px rgba(0, 0, 0, 0.3);
 $box-shadow-dark: 0px 1px 3px rgba(245, 238, 238, 0.3);
