--- a/src/components/editor/editor-section/editor-section.scss
+++ b/src/components/editor/editor-section/editor-section.scss
@@ -45,7 +45,9 @@
 }
 
 .cm-scroller {
+  @include scroll;
   width: 100%;
+  padding-bottom: 10px;
 
   .cm-gutters {
     font-family: 'DM Sans', sans-serif;
@@ -55,6 +57,7 @@
 }
 
 .cm-content {
+  @include scroll;
   font-family: 'DM Sans', sans-serif;
   width: 350px;
 
@@ -86,4 +89,3 @@
     width: 210px;
   }
 }
-
